[package]
name = "bacnet-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bacnet-stack-wrapper = { path = "../bacnet-stack-wrapper"}
serde_json = "1.0.91"
bindgen = "0.63.0"
bacnet-stack-wrapper ={ path = "../bacnet-stack-wrapper" }

[build-dependencies]
bindgen = "0.63.0"